# SnakeSFMLC

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md  Snake_SFML.sln  Snake_SFML.vcxproj  Snake_SFML.vcxproj.filters
src/: Apple.cpp  Body.cpp  Game.cpp  SnakeHead.cpp  main.cpp
src/headers/: Apple.h  Body.h  Game.h  SnakeHead.h
x64/Debug/: Snake_SFML.exe.recipe  Snake_SFML.ilk  Snake_SFML.vcxproj.FileListAbsolute.txt  game.obj.enc  vc143.idb
x64/Debug/Snake_SFML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Snake_SFML.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
